post-break sync

--- a/src/content/global.yaml
+++ b/src/content/global.yaml
@@ -28,4 +28,4 @@ contact:
   discord: "https://discord.gg/mwYaf47n"
   email: "mailto:umd.slavic.cultures@gmail.com"
   github: "https://github.com/umdslavicculturesassociation"
-  terplink: "terplink"
+  terplink: "https://terplink.umd.edu/organization/sca"
