--- a/src/content/pages/join.yaml
+++ b/src/content/pages/join.yaml
@@ -13,4 +13,4 @@ blocks:
         link: "https://www.instagram.com/umd.sca/"
       - image: "/img/icons/terplink.png"
         title: "Terplink"
-        link: "https://discord.gg/WhT9n7Zy6j"
+        link: "https://terplink.umd.edu/organization/sca"
